trying to fix the chat overflow on desktop

--- a/common/common.scss
+++ b/common/common.scss
@@ -52,15 +52,192 @@ input[type="color"]:focus,
 
 // Logo + Welcome Box
 #custom-welcome-banner {
-  background: rgb(128, 47, 0);
-  color: white;
-  text-align: center;
   box-sizing: border-box;
   width: 100%;
-  max-width: 1088px;
+}
+
+body.has-full-page-chat #custom-welcome-banner {
+  display: none;
 }
 
 .inner-logo-area {
+  margin: 30px auto;
+}
+
+.welcome-logo {
+  width: 100%;
+  max-height: 300px;
+  display: block;
+  object-fit: cover;
+}
+
+//Main Container
+body #main-outlet {
+  background: var(--secondary);
+}
+
+// Category Box
+.category-boxes .category-box,
+.category-list-item.category {
+  background: var(--category-box-bg);
+}
+
+body.has-sidebar-page {
+  #main-outlet-wrapper {
+    padding-left: 8px;
+  }
+
+  #main-outlet {
+    max-width: unset;
+  }
+
+  .sidebar-wrapper {
+    height: auto;
+    max-height: calc(98vh - var(--header-offset, 0));
+    margin: 30px 0 50px;
+    background-color: var(--secondary);
+    border-radius: var(--sublime-border-radius);
+    top: calc(var(--header-offset) + 30px);
+    border-top: 4px solid var(--sidebar-highlight);
+
+    .sidebar-section-wrapper
+      .sidebar-section-content
+      .sidebar-section-link-wrapper,
+    .sidebar-more-section-links-details {
+      .sidebar-section-link {
+        &:hover,
+        &:focus,
+        &.active {
+          color: var(--tertiary);
+          background: none;
+
+          .sidebar-section-link-prefix.icon {
+            color: var(--tertiary);
+          }
+        }
+      }
+    }
+  }
+}
+
+// Search Banner
+.custom-search-banner-wrap .search-menu {
+  .search-input {
+    border-radius: 0.25em;
+
+    input[type="text"] {
+      border: 1px solid transparent;
+      border-radius: var(--sublime-border-radius);
+
+      &:focus {
+        outline: 3px solid rgb(var(--primary-rgb), 0.35);
+      }
+    }
+  }
+}
+
+.display-search-banner {
+  #main-outlet {
+    padding-top: 2em;
+  }
+}
+
+// Main Container
+body:not(.has-full-page-chat) #main-outlet {
   margin-top: 30px;
+  margin-bottom: 50px;
+  border: 2px dotted #01949a;
+  border-radius: var(--sublime-border-radius);
   padding: 3em 3em 5%;
+  max-width: 1150px;
+  padding-bottom: 5% !important; // overriding inline style
+
+  @media screen and (width <= 700px) {
+    padding: 1.5em;
+    margin-top: 0;
+  }
+
+  @media screen and (width <= 1120px) {
+    width: 80%;
+  }
+
+  @media screen and (width <= 1075px) {
+    width: 85%;
+  }
+
+  .archetype-regular & {
+    min-height: 500px;
+  }
+}
+
+// Modals
+.modal-inner-container {
+  border-radius: var(--sublime-border-radius);
+  border-top: 4px solid var(--sidebar-highlight);
+}
+
+// Nav
+.nav-pills li a {
+  border: 1px solid transparent;
+  border-radius: var(--sublime-border-radius);
+
+  &:hover {
+    border-radius: var(--sublime-border-radius);
+    transition: all 0.3s linear;
+    background-color: transparent;
+    color: var(--tertiary);
+    border: 1px dashed var(--tertiary);
+  }
+
+  &.active {
+    border-radius: var(--sublime-border-radius);
+    transition: all 0.3s linear;
+    color: var(--secondary);
+    border: 1px solid var(--sublime-border-radius);
+    background: #4f8a7c;
+  }
+}
+
+// Category Boxes
+.category-boxes {
+  display: grid;
+  margin-top: 2em;
+  gap: 1.5em;
+  grid-template-columns: 32% 32% 32%;
+  border-radius: var(--sublime-border-radius);
+
+  .category-box {
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    border: none;
+    border-top: 2px solid;
+    background: var(--category-box-bg);
+    border-radius: var(--sublime-border-radius);
+    box-shadow: 0 3px 6px 0 rgb(2, 47, 57, 0.14);
+
+    .category-box-inner {
+      border: none;
+      padding: 0;
+
+      .category-details {
+        padding: 0.8em 1em 0.2em 1em;
+      }
+    }
+
+    &:hover {
+      box-shadow: var(--category-hover-shadow);
+    }
+  }
+
+  .description {
+    padding-top: 10px;
+    color: var(--category-box-font-color);
+  }
+}
+
+@media (width <= 960px) {
+  .category-boxes.with-logos.with-subcategories {
+    grid-template-columns: 1fr;
+  }
 }
